- do not raise the command log more than once for a given command producing continuous output
- small improvements to command history in console
- deal better with commands producing large amounts of output
- small fixes in several plugins
- package installation/update: semi-automate package installation in response to "require ()" calls
- package installation/update: the online list of available packages is cached up to one hour (and only as long as the relevant options are unchanged)
- package installation/update: give better progress indication
- package installation/update: package dependencies are handled correctly when installating new packages
- package installation/update: packages can be installed to custom library locations
- fix spurious line breaks in output in command log and console
- Improved syntax highlighting defintion including code folding
- fix compilation with GCC 4.1
- don't crash on more than 100 rows of data in the editor (off by 2 bug in storage allocation)
- correctly initialize the internal NaN representation (would sometimes be initialized to 0, resulting in 0s not to be shown in the editor)
- engine status bar label ("R engine busy/idle") now changes background color according to state
- honor DESTDIR setting while installing rkward R package, and add configure option --with-r-libdir
- only link against -lRlapack, if that is available
- commands producing lots of output would sometimes be impossible to interrupt. Fixed
- show command output immediately in command log
- remember location where R script/workspace files were last opened, and start file-selection dialogs there
- sometimes the last level in the factor levels editor got lost. Fixed

--- Version 0.3.6 - Apr-23-2006
- several fixes to the distributions plugins
- remove debian dir from source distribution again
- remove one level of menu nesting for save/load R Objects plugins
- check for and handle some strange R parse errors that could crash rkward